--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Hello Coursera</title>
+	<title></title>
 </head>
 <body>
-<h1>Hello Coursera!<h1>
+	<h1> Hello Coursera </h1>
 </body>
-</html>s
+</html>
