--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="CSS/style.css">
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
-	<title></title>
+	<title>Simple Responsive Website</title>
 </head>
 <body>
-	<h1> Hello Coursera </h1>
+  <div>
+    <h1 id="title">Our Menu</h1>
+  </div>
+  <div class="row">
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <section id="section1">
+        <h2>
+          Beef
+        </h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at congue urna, sit amet malesuada elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec suscipit ultricies rhoncus. Aenean sapien magna, euismod ornare metus eu, accumsan scelerisque tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+        </p>
+      </section>
+  </div>
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <section id="section2">
+        <h2>
+          Chicken
+        </h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at congue urna, sit amet malesuada elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec suscipit ultricies rhoncus. Aenean sapien magna, euismod ornare metus eu, accumsan scelerisque tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+        </p>
+      </section>
+  </div>
+    <div class="col-lg-4 col-md-12 col-sm-12">
+      <section id="section3">
+        <h2>
+          Sushi
+        </h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at congue urna, sit amet malesuada elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec suscipit ultricies rhoncus. Aenean sapien magna, euismod ornare metus eu, accumsan scelerisque tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+        </p>
+      </section>
+  </div>
+</div>
 </body>
 </html>
